--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
         <header class="header">
             <div class="container">
                 <nav class="header-nav">
-                    <a href="" class="link tag"><span class="tag-start">Web</span><span class="tag-end">Studio</span></a>
+                    <a href="" class="link logo"><span class="logo-start">Web</span><span class="logo-end">Studio</span></a>
                     <ul class="header-list list">
                         <li class="header-item"><a href="" class="header-link link">Студия</a></li>
                         <li class="header-item"><a href="./portfolio.html" class="header-link link">Портфолио</a></li>
                         <li class="header-item"><a href="" class="header-link link">Контакты</a></li>
                     </ul> 
                     <ul class="header-hero list" >
-                        <li class="headet-mail"><a href="mailto:info@devstudio.com" class="header-link link">info@devstudio.com</a></li>
-                        <li class="headet-tel"><a href="tel:+38-096-111-11-11" class="header-link link"> +38 096 111 11 11</a></li>
+                        <li class="header-mail"><a href="mailto:info@devstudio.com" class="header-link link">info@devstudio.com</a></li>
+                        <li class="header-tel"><a href="tel:+38-096-111-11-11" class="header-link link"> +38 096 111 11 11</a></li>
                     </ul>   
                 </nav>
             </div>  
@@ -33,7 +33,7 @@
             <section class="begin">
                 <div class="container">
                     <h1 class="begin-title">Эффективные решения для вашего бизнеса</h1>
-                    <button type="button" class="begin-btn btn">Заказать услугу</button>
+                    <button type="button" class=" btn">Заказать услугу</button>
                 </div>
             </section>
             <section class="benefits">
