--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
                         <li class="header-item"><a href="" class="header-link link">Контакты</a></li>
                     </ul> 
                     <ul class="header-hero list" >
-                        <li class="header-mail"><a href="mailto:info@devstudio.com" class="header-link link">info@devstudio.com</a></li>
-                        <li class="header-tel"><a href="tel:+38-096-111-11-11" class="header-link link"> +38 096 111 11 11</a></li>
+                        <li class="header-contacts"><a href="mailto:info@devstudio.com" class="header-second-link link">info@devstudio.com</a></li>
+                        <li class="header-contacts"><a href="tel:+38-096-111-11-11" class="header-second-link link"> +38 096 111 11 11</a></li>
                     </ul>   
                 </nav>
             </div>  
@@ -59,49 +59,63 @@
                 </div>
             </section>  
             <section class="work">
-                <h2 class="work-title">Чем мы занимаемся</h2>
-                <ul class="work-list list">
-                    <li class="work-item"><img src="./images/box1.jpg" alt="Планшет с клавиатурой" width="370" height="294"></li>
-                    <li class="work-item"><img src="./images/box3.jpg" alt="Телефон и ноутбук" width="370" height="294"></li>
-                    <li class="work-item"> <img src="./images/box2.jpg" alt="Планшет с стилусом" width="370" height="294"></li>
-                </ul>
+                <div class="container">
+                    <h2 class="work-title">Чем мы занимаемся</h2>
+                    <ul class="work-list list">
+                        <li class="work-item"><img src="./images/box1.jpg" alt="Планшет с клавиатурой" width="370" height="294"></li>
+                        <li class="work-item"><img src="./images/box3.jpg" alt="Телефон и ноутбук" width="370" height="294"></li>
+                        <li class="work-item"> <img src="./images/box2.jpg" alt="Планшет с стилусом" width="370" height="294"></li>
+                    </ul>
+                </div>
             </section>    
             <section class="team">
-                <h2 class="team-title">Наша команда</h2>
-                <ul class="team-list list">
-                    <li class="team-item">
-                        <img src="./images/worker1.jpg " alt="Игорь Демьяненко" width="270" height="260">
-                        <p class="team-name">Игорь Демьяненко</p>
-                        <p lang="en" class="team-position">Product Designer</p>
-                    </li>
-                    <li class="team-item">
-                        <img src="./images/worker2.jpg" alt="Ольга Репина" width="270" height="260">
-                        <p class="team-name">Ольга Репина</p>
-                        <p lang="en" class="team-position">Frontend Developer</p>   
-                    </li>
-                    <li class="team-item">
-                        <img src="./images/worker3.jpg" alt="Николай Тарасов" width="270" height="260">
-                        <p class="team-name">Николай Тарасов</p>
-                        <p lang="en" class="team-position">Marketing</p>
-                    </li>
-                    <li class="team-item">
-                        <img src="./images/worker4.jpg" alt="Михаил Ермаков"  width="270" height="260">
-                        <p class="team-name">Михаил Ермаков</p>
-                        <p lang="en" class="team-position">UI Designer</p>  
-                    </li>
-                </ul>
+                <div class="container">
+                    <h2 class="team-title">Наша команда</h2>
+                    <ul class="team-list list">
+                        <li class="team-item">
+                            <img src="./images/worker1.jpg " alt="Игорь Демьяненко" width="270" height="260">
+                            <div class="team-margin">
+                                <p class="team-name">Игорь Демьяненко</p>
+                                <p lang="en" class="team-position">Product Designer</p>
+                            </div>
+                        </li>
+                        <li class="team-item">
+                            <img src="./images/worker2.jpg" alt="Ольга Репина" width="270" height="260">
+                            <div class="team-margin">
+                                <p class="team-name">Ольга Репина</p>
+                                <p lang="en" class="team-position">Frontend Developer</p> 
+                            </div>  
+                        </li>
+                        <li class="team-item">
+                            <img src="./images/worker3.jpg" alt="Николай Тарасов" width="270" height="260">
+                            <div class="team-margin">
+                                <p class="team-name">Николай Тарасов</p>
+                                <p lang="en" class="team-position">Marketing</p>
+                            </div>
+                        </li>
+                        <li class="team-item">
+                            <img src="./images/worker4.jpg" alt="Михаил Ермаков"  width="270" height="260">
+                            <div class="team-margin">
+                                <p class="team-name">Михаил Ермаков</p>
+                                <p lang="en" class="team-position">UI Designer</p>
+                            </div> 
+                        </li>
+                    </ul>
+                </div>
             </section>        
                 
         </main>
         <footer class="footer">
-            <a href="" class="footer-main-link link"><span class="tag-start">Web</span><span class="tag-end">Studio</span> </a>
-            <address><a href="https://goo.gl/maps/usRxasDixCcgagAA9" target="_blank" class="footer-position link">г. Киев, пр-т Леси Украинки, 26</a></address>
-            <address>
-                <ul class="footer-list list">
-                    <li class="footer-item"><a href="mailto:info@devstudio.com" class="footer-link link">info@devstudio.com</a></li>
-                    <li class="footer-item"><a href="tel:+38-096-111-11-11" class="footer-link link">+38 096 111 11 11</a></li>
-                </ul> 
-            </address>  
+            <div class="container">
+                <a href="" class="footer-logo link"><span class="logo-start">Web</span><span class="logo-footer-end">Studio</span></a>
+               <address>
+                    <ul class="footer-list list">
+                        <li class="footer-item"><a href="https://goo.gl/maps/usRxasDixCcgagAA9" target="_blank" class="footer-position link">г. Киев, пр-т Леси Украинки, 26</a></li>
+                        <li class="footer-item"><a href="mailto:info@devstudio.com" class="footer-link link">info@devstudio.com</a></li>
+                        <li class="footer-item"><a href="tel:+38-096-111-11-11" class="footer-link link">+38 096 111 11 11</a></li>
+                    </ul> 
+                </address>
+            </div>  
         </footer>
 </body>
 </html>    
