--- a/portfolio.html
+++ b/portfolio.html
@@ -16,22 +16,22 @@
         <header class="header">
             <div class="container">
                 <nav class="header-nav">
-                    <a href="" class="link tag"><span class="webstudio"><span class="tag-start">Web</span><span class="tag-end">Studio</span></span></a>
+                    <a href="" class="link logo"><span class="logo-start">Web</span><span class="logo-end">Studio</span></a>
                     <ul class="header-list list">
                         <li class="header-item"><a href="" class="header-link link">Студия</a></li>
-                        <li class="header-item"><a href="" class="header-link link">Портфолио</a></li>
+                        <li class="header-item"><a href="./portfolio.html" class="header-link link">Портфолио</a></li>
                         <li class="header-item"><a href="" class="header-link link">Контакты</a></li>
                     </ul> 
                     <ul class="header-hero list" >
-                        <li class="header-mail"><a href="mailto:info@devstudio.com" class="header-link link">info@devstudio.com</a></li>
-                        <li class="header-tel"><a href="tel:+38-096-111-11-11" class="header-link link"> +38 096 111 11 11</a></li>
+                        <li class="header-contacts"><a href="mailto:info@devstudio.com" class="header-second-link link">info@devstudio.com</a></li>
+                        <li class="header-contacts"><a href="tel:+38-096-111-11-11" class="header-second-link link"> +38 096 111 11 11</a></li>
                     </ul>   
                 </nav>
             </div>  
         </header>
         <main>
             <section class="section">
-                <div class="main-container">
+                <div class="container our-works">
                     <nav class="section-nav">
                         <ul class="section-main-list list">
                             <li class="section-list-item"><button type="button" class="btn-item btn">Все</button> 
