--- a/portfolio.html
+++ b/portfolio.html
@@ -43,49 +43,67 @@
                     </nav>  
                     <ul class="work-list list">
                         <li class="work-item">
-                            <img src="./images/portfolio1.jpg" alt="Ноутбук с сайтом">
-                            <h4 class="work-title" >Технокряк</h4>
-                            <p class="work-category">Веб-сайт</p>
+                            <img src="./images/portfolio1.jpg" alt="Ноутбук с сайтом" width="370" class="img">
+                            <div class="work-text">
+                                <h4 class="work-title" >Технокряк</h4>
+                                <p class="work-category">Веб-сайт</p>
+                            </div>
                         </li>
                         <li class="work-item">
-                            <img src="./images/portfolio2.jpg" alt="Баскетболист">
-                            <h4 class="work-title" >Постер New Orlean vs Golden Star</h4>
-                            <p class="work-category">Дизайн</p>
+                            <img src="./images/portfolio2.jpg" alt="Баскетболист" width="370" class="img">
+                            <div class="work-text">
+                                <h4 class="work-title" >Постер New Orlean vs Golden Star</h4>
+                                <p class="work-category">Дизайн</p>
+                            </div>
                         </li>
                         <li class="work-item"> 
-                            <img src="./images/portfolio3.jpg" alt="Логотип">
-                            <h4 class="work-title">Ресторан Seafood</h4>
-                            <p class="work-category">Приложение</p>
+                            <img src="./images/portfolio3.jpg" alt="Логотип" width="370" class="img">
+                            <div class="work-text">
+                                <h4 class="work-title">Ресторан Seafood</h4>
+                                <p class="work-category">Приложение</p>
+                            </div>
                         </li>
                         <li class="work-item">
-                            <img src="./images/portfolio4.jpg" alt="Наушники">
-                            <h4 class="work-title" >Проект Prime</h4>
-                            <p class="work-category">Маркетинг</p>
+                            <img src="./images/portfolio4.jpg" alt="Наушники" width="370" class="img">
+                            <div class="work-text">
+                                <h4 class="work-title" >Проект Prime</h4>
+                                <p class="work-category">Маркетинг</p>
+                            </div>
                         </li>
                         <li class="work-item">
-                            <img src="./images/portfolio5.jpg" alt="Коробки">
-                            <h4 class="work-title" >Проект Boxes</h4>
-                            <p class="work-category">Приложение</p>
+                            <img src="./images/portfolio5.jpg" alt="Коробки" width="370" class="img">
+                            <div class="work-text">
+                                <h4 class="work-title" >Проект Boxes</h4>
+                                <p class="work-category">Приложение</p>
+                            </div>
                         </li>
                         <li class="work-item">
-                            <img src="./images/portfolio6.jpg" alt="Монитор">
-                            <h4 class="work-title" >Inspiration has no Borders</h4>
-                            <p class="work-category">Веб-сайт</p>
+                            <img src="./images/portfolio6.jpg" alt="Монитор" width="370" class="img">
+                            <div class="work-text">
+                                <h4 class="work-title" >Inspiration has no Borders</h4>
+                                <p class="work-category">Веб-сайт</p>
+                            </div>
                         </li>
                         <li class="work-item">
-                            <img src="./images/portfolio7.jpg" alt="Журнал">
-                            <h4 class="work-title" >Издание Limited Edition</h4>
-                            <p class="work-category">Дизайн</p>
+                            <img src="./images/portfolio7.jpg" alt="Журнал" width="370" class="img">
+                            <div class="work-text">
+                                <h4 class="work-title" >Издание Limited Edition</h4>
+                                <p class="work-category">Дизайн</p>
+                            </div>
                         </li>
                         <li class="work-item">
-                            <img src="./images/portfolio8.jpg" alt="Лэйбл">
-                            <h4 class="work-title" >Проект LAB</h4>
-                            <p class="work-category">Маркетинг</p>
+                            <img src="./images/portfolio8.jpg" alt="Лэйбл" width="370" class="img">
+                            <div class="work-text">
+                                <h4 class="work-title" >Проект LAB</h4>
+                                <p class="work-category">Маркетинг</p>
+                            </div>
                         </li>
                         <li class="work-item">
-                            <img src="./images/portfolio9.jpg" alt="Рабочий ноутбук">
-                            <h4 class="work-title" >Growing Business</h4>
-                            <p class="work-category">Приложение</p>
+                            <img src="./images/portfolio9.jpg" alt="Рабочий ноутбук" width="370" class="img">
+                            <div class="work-text">
+                                <h4 class="work-title" >Growing Business</h4>
+                                <p class="work-category">Приложение</p>
+                            </div>
                         </li>
                         
                     </ul> 
