--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                <address>
                     <ul class="footer-list list">
                         <li class="footer-item"><a href="https://goo.gl/maps/usRxasDixCcgagAA9" target="_blank" class="footer-position link">г. Киев, пр-т Леси Украинки, 26</a></li>
-                        <li class="footer-item"><a href="mailto:info@devstudio.com" class="footer-link link">info@devstudio.com</a></li>
+                        <li class="footer-item"><a href="mailto:info@example.com" class="footer-link link">info@example.com</a></li>
                         <li class="footer-item"><a href="tel:+38-096-111-11-11" class="footer-link link">+38 096 111 11 11</a></li>
                     </ul> 
                 </address>
