--- a/portfolio.html
+++ b/portfolio.html
@@ -43,63 +43,63 @@
                     </nav>  
                     <ul class="work-list list">
                         <li class="work-item">
-                            <img src="./images/portfolio1.jpg" alt="Ноутбук с сайтом" width="372" class="img">
+                            <img src="./images/portfolio1.jpg" alt="Ноутбук с сайтом" width="370" class="img">
                             <div class="work-text">
                                 <h4 class="work-title" >Технокряк</h4>
                                 <p class="work-category">Веб-сайт</p>
                             </div>
                         </li>
                         <li class="work-item">
-                            <img src="./images/portfolio2.jpg" alt="Баскетболист" width="372" class="img">
+                            <img src="./images/portfolio2.jpg" alt="Баскетболист" width="370" class="img">
                             <div class="work-text">
                                 <h4 class="work-title" >Постер New Orlean vs Golden Star</h4>
                                 <p class="work-category">Дизайн</p>
                             </div>
                         </li>
-                        <li class="work-item"> 
-                            <img src="./images/portfolio3.jpg" alt="Логотип" width="372" class="img">
+                        <li class="work-item third"> 
+                            <img src="./images/portfolio3.jpg" alt="Логотип" width="370" class="img">
                             <div class="work-text">
                                 <h4 class="work-title">Ресторан Seafood</h4>
                                 <p class="work-category">Приложение</p>
                             </div>
                         </li>
                         <li class="work-item">
-                            <img src="./images/portfolio4.jpg" alt="Наушники" width="372" class="img">
+                            <img src="./images/portfolio4.jpg" alt="Наушники" width="370" class="img">
                             <div class="work-text">
                                 <h4 class="work-title" >Проект Prime</h4>
                                 <p class="work-category">Маркетинг</p>
                             </div>
                         </li>
                         <li class="work-item">
-                            <img src="./images/portfolio5.jpg" alt="Коробки" width="372" class="img">
+                            <img src="./images/portfolio5.jpg" alt="Коробки" width="370" class="img">
                             <div class="work-text">
                                 <h4 class="work-title" >Проект Boxes</h4>
                                 <p class="work-category">Приложение</p>
                             </div>
                         </li>
-                        <li class="work-item">
-                            <img src="./images/portfolio6.jpg" alt="Монитор" width="372" class="img">
+                        <li class="work-item third">
+                            <img src="./images/portfolio6.jpg" alt="Монитор" width="370" class="img">
                             <div class="work-text">
                                 <h4 class="work-title" >Inspiration has no Borders</h4>
                                 <p class="work-category">Веб-сайт</p>
                             </div>
                         </li>
                         <li class="work-item">
-                            <img src="./images/portfolio7.jpg" alt="Журнал" width="372" class="img">
+                            <img src="./images/portfolio7.jpg" alt="Журнал" width="370" class="img">
                             <div class="work-text">
                                 <h4 class="work-title" >Издание Limited Edition</h4>
                                 <p class="work-category">Дизайн</p>
                             </div>
                         </li>
                         <li class="work-item">
-                            <img src="./images/portfolio8.jpg" alt="Лэйбл" width="372" class="img">
+                            <img src="./images/portfolio8.jpg" alt="Лэйбл" width="370" class="img">
                             <div class="work-text">
                                 <h4 class="work-title" >Проект LAB</h4>
                                 <p class="work-category">Маркетинг</p>
                             </div>
                         </li>
-                        <li class="work-item">
-                            <img src="./images/portfolio9.jpg" alt="Рабочий ноутбук" width="372" class="img">
+                        <li class="work-item third">
+                            <img src="./images/portfolio9.jpg" alt="Рабочий ноутбук" width="370" class="img">
                             <div class="work-text">
                                 <h4 class="work-title" >Growing Business</h4>
                                 <p class="work-category">Приложение</p>
@@ -111,17 +111,16 @@
             </section>
         </main>
         <footer class="footer">
-            <div class="footer-container">
-                <a href="" class="footer-main-link link"><span class="footer-webstudio"><span class="tag-start">Web</span><span class="tag-end">Studio</span></span></a>
-                <!-- <address><a href="https://goo.gl/maps/usRxasDixCcgagAA9" target="_blank" class="footer-position link">г. Киев, пр-т Леси Украинки, 26</a></address> -->
-                <address class="address">
+            <div class="container">
+                <a href="" class="footer-logo link"><span class="logo-start">Web</span><span class="logo-footer-end">Studio</span></a>
+               <address>
                     <ul class="footer-list list">
-                        <li class="footer-item"><a href="https://goo.gl/maps/usRxasDixCcgagAA9" target="_blank" class="footer-position  link">г. Киев, пр-т Леси Украинки, 26</a></li>
-                        <li class="footer-item"><a href="mailto:info@devstudio.com" class="footer-link link">info@devstudio.com</a></li>
+                        <li class="footer-item"><a href="https://goo.gl/maps/usRxasDixCcgagAA9" target="_blank" class="footer-position link">г. Киев, пр-т Леси Украинки, 26</a></li>
+                        <li class="footer-item"><a href="mailto:info@example.com" class="footer-link link">info@example.com</a></li>
                         <li class="footer-item"><a href="tel:+38-096-111-11-11" class="footer-link link">+38 096 111 11 11</a></li>
                     </ul> 
-                </address> 
-            </div> 
+                </address>
+            </div>  
         </footer>
 
     </body>
