--- a/index.html
+++ b/index.html
@@ -77,6 +77,20 @@
                             <div class="team-margin">
                                 <p class="team-name">Игорь Демьяненко</p>
                                 <p lang="en" class="team-position">Product Designer</p>
+                                <ul class="team-soc-list list">
+                                    <li class="team-soc-item">
+                                        <a href="" class="team-soc-link link"></a>
+                                    </li> 
+                                    <li class="team-soc-item">
+                                        <a href="" class="team-soc-link link"></a>
+                                    </li> 
+                                    <li class="team-soc-item">
+                                        <a href="" class="team-soc-link link"></a>
+                                    </li> 
+                                    <li class="team-soc-item">
+                                        <a href="" class="team-soc-link link"></a>
+                                    </li>         
+                                </ul>
                             </div>
                         </li>
                         <li class="team-item">
