--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
                 <div class="container">
                     <ul class="benefits-list list">
                         <li class="benefits-item">
+                            <div class="background-icon">
+                                <svg class="benefits-icon" width="70" height="70">
+                                    <use href="./images/icons/symbol-defs.svg#icon-antenna"></use>
+                                </svg>
+                            </div>
                             <h3 class="benefits-title">Внимание к деталям</h3>
                             <p class="benefits-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                         </li>
