--- a/portfolio.html
+++ b/portfolio.html
@@ -40,11 +40,11 @@
                 <div class="container our-works">
                     <nav class="section-nav">
                         <ul class="section-main-list list">
-                            <li class="section-list-item"><button type="button" class="btn-item btn">Все</button> 
-                            <li class="section-list-item"><button type="button" class="btn-item btn">Веб-сайты</button> 
-                            <li class="section-list-item"><button type="button" class="btn-item btn">Приложения</button> 
-                            <li class="section-list-item"><button type="button" class="btn-item btn">Дизайн</button> 
-                            <li class="section-list-item"><button type="button" class="btn-item btn">Маркетинг</button>
+                            <li class="section-list-item"><button type="button" class="btn-item btn"><span class="btn-text">Все</span> </button> 
+                            <li class="section-list-item"><button type="button" class="btn-item btn"><span class="btn-text">Веб-сайты</span> </button> 
+                            <li class="section-list-item"><button type="button" class="btn-item btn"><span class="btn-text">Приложения</span> </button> 
+                            <li class="section-list-item"><button type="button" class="btn-item btn"><span class="btn-text">Дизайн</span> </button> 
+                            <li class="section-list-item"><button type="button" class="btn-item btn"><span class="btn-text">Маркетинг</span> </button>
                         </ul>
                     </nav>  
                     <ul class="work-list list">
