--- a/portfolio.html
+++ b/portfolio.html
@@ -49,7 +49,10 @@
                     </nav>  
                     <ul class="work-list list">
                         <li class="work-item">
-                            <img src="./images/portfolio1.jpg" alt="Ноутбук с сайтом" width="370" class="img">
+                            <div class="masters-cover-wrap">
+                                <img src="./images/portfolio1.jpg" alt="Ноутбук с сайтом" width="370" class="img">
+                                <p class="work-cover-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                            </div>
                             <div class="work-text">
                                 <h4 class="work-title" >Технокряк</h4>
                                 <p class="work-category">Веб-сайт</p>
