--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
                     <a href="" class="link logo"><span class="logo-start">Web</span><span class="logo-end">Studio</span></a>
                     <ul class="header-list list">
                         <li class="header-item"><a href="" class="header-link link">Студия</a></li>
-                        <li class="header-item"><a href="./portfolio.html" class="header-link link">Портфолио</a></li>
+                        <li class="header-item"><a href="./portfolio.html" class="header-link link active">Портфолио</a></li>
                         <li class="header-item"><a href="" class="header-link link">Контакты</a></li>
                     </ul> 
                     <ul class="header-hero list" >
