--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
                 <nav class="header-nav">
                     <a href="" class="link logo"><span class="logo-start">Web</span><span class="logo-end">Studio</span></a>
                     <ul class="header-list list">
-                        <li class="header-item"><a href="" class="header-link link">Студия</a></li>
+                        <li class="header-item"><a href="./index.html" class="header-link link">Студия</a></li>
                         <li class="header-item"><a href="./portfolio.html" class="header-link link active">Портфолио</a></li>
                         <li class="header-item"><a href="" class="header-link link">Контакты</a></li>
                     </ul> 
