--- a/index.html
+++ b/index.html
@@ -354,7 +354,14 @@
                         </li>
                     </ul>
                 </div>
-                    
+                <form class="subscribe">
+                    <p class="subscribe-title">Подпишитесь на рассылку</p>
+                    <input type="email" name="email" class="subscribe-input" placeholder="E-mail">
+                    <button type="submit" class="subscribe-btn btn">Подписаться<svg class="subscribe-send" width="24" height="24">
+                            <use href="./images/icons/symbol-defs.svg#icon-send"></use>
+                        </svg>
+                    </button>
+                </form>
             </div>  
         </footer>
         <div class="backdrop is-hidden" data-modal>
@@ -362,6 +369,48 @@
                 <svg class="modal-icon-close" width="30" height="30" data-modal-close>
                     <use href="./images/icons/symbol-defs.svg#icon-close"></use>
                 </svg>
+                <form class="modal-form">
+                    <p class="form-title">Оставьте свои данные, мы вам перезвоним</p>
+                    <label for="name" class="form-label">Имя</label>
+                    <div class="input-wrap">
+                        <input type="text" name="name" id="name" class="form-input">
+                        <svg class="input-icon" width="18" height="18">
+                            <use href="./images/icons/symbol-defs.svg#icon-person"></use>
+                        </svg>
+                    </div>
+                    <label for="phone" class="form-label">Телефон</label>
+                    <div class="input-wrap">
+                        <input type="tel" name="phone" id="phone" class="form-input">
+                        <svg class="input-icon" width="18" height="18">
+                            <use href="./images/icons/symbol-defs.svg#icon-phone"></use>
+                        </svg>
+                    </div>
+                    <label for="email" class="form-label">Почта</label>
+                    <div class="input-wrap">
+                        <input type="email" name="email" id="email" class="form-input">
+                        <svg class="input-icon" width="18" height="18">
+                            <use href="./images/icons/symbol-defs.svg#icon-email"></use>
+                        </svg>
+                    </div>
+                    <label for="user-text" class="form-text">Комментарий</label>
+                    <textarea 
+                    name="user-text" 
+                    id="user-text"
+                    class="user-text"
+                    placeholder="Введите текст"
+                    ></textarea>
+                    <input type="checkbox" name="form-check" id="form-check" class="form-check visually-hidden">
+                    <label for="form-check" class="check-text">
+                        <span class="check-wrap">
+                            <svg class="icon-check" width="16" height="15">
+                                <use href="./images/icons/symbol-defs.svg#icon-cheked"></use>
+                            </svg>
+                        </span>
+                        Соглашаюсь с рассылкой и принимаю &nbsp;
+                        <a href="#" class="check-link">Условия договора</a>
+                    </label>
+                    <button type="submit" class="btn modal-btn">Отправить</button>
+                </form>
             </div>
         </div>
         <script src="./js/modal.js"></script>
