--- a/portfolio.html
+++ b/portfolio.html
@@ -197,6 +197,14 @@
                         </li>
                     </ul>
                 </div>
+                <form class="subscribe">
+                    <p class="subscribe-title">Подпишитесь на рассылку</p>
+                    <input type="email" name="email" class="subscribe-input" placeholder="E-mail">
+                    <button type="submit" class="subscribe-btn btn">Подписаться<svg class="subscribe-send" width="24" height="24">
+                            <use href="./images/icons/symbol-defs.svg#icon-send"></use>
+                        </svg>
+                    </button>
+                </form>
                     
             </div>  
         </footer>
