--- a/index.html
+++ b/index.html
@@ -366,9 +366,12 @@
         </footer>
         <div class="backdrop is-hidden" data-modal>
             <div class="modal">
-                <svg class="modal-icon-close" width="30" height="30" data-modal-close>
-                    <use href="./images/icons/symbol-defs.svg#icon-close"></use>
-                </svg>
+                <button type="button" class="modal-icon-close">
+                    <svg  width="18" height="18" data-modal-close>
+                        <use href="./images/icons/symbol-defs.svg#icon-close"></use>
+                    </svg>  
+                </button>
+                
                 <form class="modal-form">
                     <p class="form-title">Оставьте свои данные, мы вам перезвоним</p>
                     <label for="name" class="form-label">Имя</label>
